# ft_hangouts

./: CMakeLists.txt  Main.qml  contactmanager.cpp  contactmanager.h  main.cpp  someclass.cpp  someclass.h
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml
ft_hangouts/: CMakeLists.txt  Main.qml
